[build_sphinx]
project = "python-libpcap"
version = "0.1.1"
release = "0.1.1"
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html

[bdist_wheel]
universal = 1

[metadata]
description-file = README.rst

[bumpversion]
current_version = 0.1.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:docs/source/conf.py]
search = version = "{current_version}"
    release = "{current_version}"
replace = version = "{new_version}"
    release = "{new_version}"

[bumpversion:file:pylibpcap/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
