[bumpversion]
current_version = 0.5.2
commit = True
tag = True

[metadata]
description_file = README.md

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
ignore = W292,E303
exclude = 
	__init__.py

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html

[bumpversion:file:setup.py]

[bumpversion:file:docs/source/conf.py]

[bumpversion:file:pylibpcap/__init__.py]
